<resources>
    <string name="app_name">NYTSearch</string>
    <string name="hint">Enter search query</string>
    <string name="search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="default_text">Text View</string>
    <string name="title_activity_search">NewYork Times Article Search</string>

    <string name="action_filter">Filter</string>
    <string name="sort_order">Sort Order</string>

    <string-array name="order_array">
        <item>Default</item>
        <item>Oldest</item>
        <item>Newest</item>
    </string-array>
    <string name="sports">Sports</string>
    <string name="arts">Arts</string>
    <string name="fashion_style"><![CDATA[Fashion & Style]]></string>
    <string name="begin_date">Begin Date</string>
    <string name="news_desk_values">News Desk Values</string>
    <string name="save">Save</string>
    <string name="settings_dialog_title">Search Filters</string>
    <string name="date_placeholder">01/01/1970</string>
    <string name="date_placeholder_YYYYMMDD">19700101</string>
    <string name="fashion_plus_style">Fashion + Style</string>
    <string name="search_hint">Enter Search Query…</string>
    <string name="cancel">Cancel</string>
    <string name="nytsearch_api_key">7207142e827449f7af7b4525fd35c111</string>
</resources>
