<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.codepath.nytsearch.fragments.SettingsFragment">
        <TextView
            android:id="@+id/tvSettingsTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/settings_dialog_title"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <TextView
            android:id="@+id/tvBeginDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/begin_date"
            android:textColor="@android:color/holo_blue_light"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_below="@id/tvSettingsTitle"/>
        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_placeholder"
            android:textColor="@android:color/black"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tvBeginDate"/>
        <TextView
            android:id="@+id/tvSortOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/sort_order"
            android:textColor="@android:color/holo_blue_light"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_below="@id/tvDate"/>
        <Spinner
            android:id="@+id/spnSortOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/order_array"
            android:prompt="@string/sort_order"
            android:spinnerMode="dropdown"
            android:layout_below="@+id/tvSortOrder"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/tvNewsDeskValues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/news_desk_values"
            android:textColor="@android:color/holo_blue_light"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_below="@id/spnSortOrder"/>
        <CheckBox android:id="@+id/cbArts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arts"
            android:buttonTint="@android:color/holo_blue_light"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_below="@+id/tvNewsDeskValues"
            tools:targetApi="lollipop" />
        <CheckBox android:id="@+id/cbFashionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fashion_style"
            android:buttonTint="@android:color/holo_blue_light"
            android:layout_below="@id/cbArts"
            android:layout_alignStart="@id/cbArts"
            tools:targetApi="lollipop" />
        <CheckBox android:id="@+id/cbSports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports"
            android:buttonTint="@android:color/holo_blue_light"
            android:layout_below="@id/cbFashionStyle"
            android:layout_alignStart="@id/cbArts"
            tools:targetApi="lollipop" />
        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cbSports"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@android:color/holo_blue_light"
            android:textColor="@android:color/white"
            android:text="@string/save"
            />
    </RelativeLayout>
</layout>